<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_grid"
    android:orientation="horizontal"
    android:columnCount="2"
    android:useDefaultMargins="true"

    tools:context="com.mertogurcu.vucutkitleendeksi.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/boy_tv"
        android:layout_gravity="center_vertical|right"

        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editText"
        android:maxLength="3"
        android:layout_row="0"
        android:layout_column="1"
        tools:layout_gravity="fill_horizontal" >
        <requestFocus/>

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boy_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        tools:padding="@dimen/padding_tv"
        android:padding="@dimen/padding_tv"
        android:background="@android:color/holo_blue_dark"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/kilo_tv"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical|right"
        android:layout_row="1"
        android:layout_column="0"

        />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:id="@+id/seekBar"
        android:progress="20"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:id="@+id/kilo_tv"
        android:layout_row="2"
        android:layout_column="1"

        android:text="50 kg" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/cinsiyet_tv"
        android:id="@+id/textView5"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"

        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"


        >
        <RadioButton
            android:id="@+id/bay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bay"

            android:checked="true"/>
        <RadioButton
            android:id="@+id/bayan"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bayan"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/ideal_kilo_tv"
        android:id="@+id/textView6"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        tools:text="@string/ideal_kilo_tv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:id="@+id/ideal_tv"
        android:padding="@dimen/padding_tv"
        android:layout_row="4"
        android:layout_column="1"


        android:background="@android:color/holo_orange_dark" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/durum_tv"
        android:id="@+id/textView8"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:id="@+id/durum_tv"
        android:padding="@dimen/padding_tv"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_column="1"

        android:background="@android:color/holo_green_light" />

    <Space  />


</GridLayout>
